--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif!important;
+}
+
 .navbar{
     background-color: transparent;
     box-shadow: none !important;
