--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,7 +19,7 @@ body{
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     background-image: url("../src/imgs/krbanner.png");
 
     background-position: center;
@@ -29,7 +29,7 @@ body{
     height: 400px;
 
     .header-img{
-        margin-right: 2em;
+        margin-right: 1em;
     }
 }
 
@@ -42,19 +42,125 @@ body{
     text-align: center;
     padding: 1em 0px 1em 0px;
     
+    .overview-section-intro{
+        max-width: 800px;
+
+        h1{
+            font-family: 'Orbitron', sans-serif;
+            font-weight: bold;
+        }
+
+        p{
+            margin-top: -0.75em;
+        }
+    }
+
     .overview-section-details{
         display: flex;
         flex-flow: row wrap;
         align-items: center;
         justify-content: center;
+
+        padding: 1em;
     }
 
-    .overview-section-intro{
-        max-width: 800px;
-    }
 
     .section{
-        margin: 2em;
+        margin: 1em;
+
+        h3{
+            font-weight: bold;
+            font-size: 22px;
+        }
+
+        p{
+            max-width: 260px;
+            font-size: 12px;
+        }
+
+        img{
+            height: 150px;
+            width: 150px;
+            border: 1px solid black;
+            box-shadow: 2px 0px 8px 2px #888888;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 1em;
+        }
+        //Button style source: 
+        /* https://codepen.io/daviddarnes/pen/VLXxMa */
+        button{
+            $button-colour: #009ED8;
+            $button-text: #ffffff;
+            $button-tint: fadeout(#000, 90%);
+
+            display: inline-block;
+            font-family: "Montserrat", "Trebuchet MS", Helvetica, sans-serif;
+            -webkit-font-smoothing: antialiased;
+            position: relative;
+            padding: .8em 1.4em;
+            padding-right: 4.7em;
+            background: $button-colour;
+            border: none;
+            color: white;
+            transition: .2s;
+            &:before,
+            &:after {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                padding-top: inherit;
+                padding-bottom: inherit;
+                width: 2.8em;
+                content: "\00a0";
+                font-family: 'FontAwesome', sans-serif;
+                font-size: 1.2em;
+                text-align: center;
+                
+                transition: .2s;
+                transform-origin: 50% 60%;
+            }
+            &:before {
+                background: $button-tint;
+            }
+            &:hover {
+                background: darken($button-colour, 10%);
+            }
+            &:active,
+            &:focus {
+                background: darken($button-colour, 30%);
+                outline: none;
+            }
+        }
+
+        .arrow{
+            background: #FE5F55;
+            &:hover {
+                background: darken(#FE5F55, 10%);
+            }
+            &:active,
+            &:focus {
+                background: darken(#FE5F55, 30%);
+            }
+            &:after {
+                content: "\F054";
+            }
+            &:hover:after {
+                -webkit-animation: bounceright .3s alternate ease infinite;
+                animation: bounceright .3s alternate ease infinite;
+            }
+        }
+
+        @-webkit-keyframes bounceright {
+            from { -webkit-transform: translateX(0); }
+            to   { -webkit-transform: translateX(3px); }
+        }
+        
+        @keyframes bounceright {
+            from { transform: translateX(0); }
+            to   { transform: translateX(3px); }
+        }
     }
 }
 
