--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,6 +2,7 @@ body{
     font-family: 'Montserrat', sans-serif!important;
 }
 
+/* Navigation */
 .navbar{
     background-color: transparent;
     box-shadow: none !important;
@@ -14,7 +15,10 @@ body{
 .userIcon{
     margin-right: 6rem;
 }
+/* Navigation end */
 
+
+/* Header */
 .header-bg{
     display: flex;
     flex-flow: row wrap;
@@ -32,7 +36,9 @@ body{
         margin-right: 1em;
     }
 }
+/* Header End */
 
+/* Overview Section */
 .overview-section{
     display: flex;
     flex-flow: column wrap;
@@ -41,6 +47,9 @@ body{
 
     text-align: center;
     padding: 1em 0px 1em 0px;
+
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
     
     .overview-section-intro{
         max-width: 800px;
@@ -163,4 +172,86 @@ body{
         }
     }
 }
+/* Overview End  */
 
+/* Patch Notes */
+.patch-table-container{
+    padding: 2em;
+
+    .patch-table{
+        width: 80vw;
+        margin: auto;
+
+        button{
+            $button-colour: #009ED8;
+            $button-text: #ffffff;
+            $button-tint: fadeout(#000, 90%);
+
+            display: inline-block;
+            font-family: "Montserrat", "Trebuchet MS", Helvetica, sans-serif;
+            -webkit-font-smoothing: antialiased;
+            position: relative;
+            padding: .5em 1em;
+            padding-right: 3.5em;
+            background: $button-colour;
+            border: none;
+            color: white;
+            transition: .2s;
+            &:before,
+            &:after {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                padding-top: inherit;
+                padding-bottom: inherit;
+                width: 2.8em;
+                content: "\00a0";
+                font-family: 'FontAwesome', sans-serif;
+                font-size: 1.2em;
+                text-align: center;
+                
+                transition: .2s;
+                transform-origin: 50% 60%;
+            }
+            &:before {
+                background: $button-tint;
+            }
+            &:hover {
+                background: darken($button-colour, 10%);
+            }
+            &:active,
+            &:focus {
+                background: darken($button-colour, 30%);
+                outline: none;
+            }
+        }
+        .arrow{
+            background: #FE5F55;
+            &:hover {
+                background: darken(#FE5F55, 10%);
+            }
+            &:active,
+            &:focus {
+                background: darken(#FE5F55, 30%);
+            }
+            &:after {
+                content: "\F054";
+            }
+            &:hover:after {
+                -webkit-animation: bounceright .3s alternate ease infinite;
+                animation: bounceright .3s alternate ease infinite;
+            }
+        }
+
+        img{
+            width: 350px;
+            height: 100px;
+        }
+
+        td{
+            vertical-align: middle;
+        }
+    }
+
+}
