--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,7 +28,7 @@ body{
 
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 
     height: 400px;
 }
