--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -254,6 +254,36 @@ body{
 /* Patch Notes End */
 
 /* Trident */
+.trident{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+
+    padding: 2em;
+
+    border-top: 1px solid black;
+
+    .trident-logo-container{
+        padding: 1em;
+        margin-right: 1em;
+    }
+
+    .trident-logo{
+        max-width: 500px;
+    }
+
+    .trident-description{
+        padding: 2em;
+
+        max-width: 800px;
+
+        h2{
+            font-weight: bold;
+        }
+    }
+}
+
 
 @media screen and (max-width: 1311px){
     .overview-section-intro{
