Basic footer added

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -285,6 +285,10 @@ body{
     }
 }
 
+.paypal{
+    max-width: 200px;
+    margin: auto;
+}
 
 @media screen and (max-width: 1311px){
     .overview-section-intro{
