--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -18,7 +18,7 @@ body{
 /* Navigation end */
 
 
-/* Header */
+/* Index Header */
 .header-bg{
     display: flex;
     flex-flow: row wrap;
@@ -32,7 +32,7 @@ body{
 
     height: 400px;
 }
-/* Header End */
+/* Index Header End */
 
 /* Overview Section */
 .overview-section{
@@ -284,11 +284,31 @@ body{
         }
     }
 }
+/* Trident End */
 
+/* Footer */
 .paypal{
     max-width: 200px;
     margin: auto;
 }
+/* Footer end */
+
+/* Heroes CSS */
+/* Index Header */
+.hero-header-bg{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-end;
+    background-image: url("../src/imgs/heroes.jpg");
+
+    // background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: 400px;
+}
+/* Index Header End */
 
 @media screen and (max-width: 1311px){
     .overview-section-intro{
